syntax = "proto3";

package spine.test.protobuf;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.protobuf";
option java_outer_classname = "TypeConverterTestProto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

enum TaskStatus {
    QUEUED = 0;
    EXECUTING = 15;
    FAILED = 2;
    SUCCESS = 3;
}
